<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Individual_Details_Part_3" >
<ScrollView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">
    <RelativeLayout
        style="@style/outerBox"
        android:layout_centerInParent="true" >
        <TextView 
            android:id="@id/tvHeading"
            style="@style/Heading"
            />
        
        <TextView 
            android:id="@+id/tvMaritalStatus"
            style="@style/Label"
            android:text="@string/marital_status"
            android:layout_below="@id/tvHeading"/>
        
        <RadioGroup
            android:id="@+id/rgMaritalStatus"
            style="@style/RadioGroupStyle"
            android:layout_below="@id/tvHeading"
            android:orientation="vertical"
            android:layout_alignLeft="@+id/etMobileNumber"
            android:layout_toRightOf="@id/tvMaritalStatus"
            >
            
            <RadioButton 
                android:id="@+id/radioSingle"
                style="@style/RadioButtonStyle"
                android:text="@string/single"
                android:checked="true"
                />
            <RadioButton 
                android:id="@+id/radioMarried"
                style="@style/RadioButtonStyle"
                android:text="@string/married"
                />
             <RadioButton 
                android:id="@+id/radioDivorcee"
                style="@style/RadioButtonStyle"
                android:text="@string/divorcee"
                />
        </RadioGroup>
        
        <TextView 
            android:id="@+id/tvMobileNumber"
            style="@style/Label"
            android:layout_below="@id/tvMaritalStatus"
            android:layout_alignTop="@+id/etMobileNumber"
            android:text="@string/mobile"
            />
        <EditText 
            android:id="@+id/etMobileNumber"
            style="@style/EditTextStyle"
            android:hint="@string/mobile_hint"
            android:layout_below="@id/rgMaritalStatus"
            android:layout_toRightOf="@id/tvMobileNumber"
            android:inputType="phone"
            />
        <TextView 
            android:id="@+id/tvAlternateNumber"
            style="@style/Label"
            android:layout_below="@id/tvMobileNumber"
            android:layout_alignTop="@+id/etAlternateNumber"
            android:text="@string/phone"
            />
        <EditText 
            android:id="@+id/etAlternateNumber"
            style="@style/EditTextStyle"
            android:layout_below="@id/etMobileNumber"
            android:layout_alignLeft="@id/etMobileNumber"
            android:layout_toRightOf="@id/tvAlternateNumber"
            android:inputType="phone"
            />
         <TextView 
            android:id="@+id/tvEmailId"
            style="@style/Label"
            android:layout_below="@id/tvAlternateNumber"
            android:layout_alignTop="@+id/etEmailId"
            android:text="@string/email"
            />
        <EditText 
            android:id="@+id/etEmailId"
            style="@style/EditTextStyle"
            android:hint="@string/email_hint"
            android:layout_below="@id/etAlternateNumber"
            android:layout_toRightOf="@id/tvEmailId"
            android:layout_alignLeft="@id/etMobileNumber"
            android:inputType="textEmailAddress"
            />
        <TextView 
            android:id="@+id/tvIdentificationNumber"
            android:layout_below="@id/etEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/identication_number"
            android:background="@color/grey"
            />
        <LinearLayout 
            android:id="@+id/lltvIdentificationNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvIdentificationNumber"
            >
            <TextView 
                android:id="@+id/tvPanCard"
                android:layout_weight="1"
                style="@style/Label"
                android:text="@string/pan_card"
                />
            <TextView 
                android:id="@+id/tvVoterId"
                android:layout_weight="1"
                style="@style/Label"
                android:text="@string/voter_id"
                />
            <TextView 
                android:id="@+id/tvAadhar"
                android:layout_weight="1"
                style="@style/Label"
                android:text="@string/aadhaar"
                />
            
        </LinearLayout>

        <LinearLayout 
            android:id="@+id/lletIdentificationNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lltvIdentificationNumber"
            >
            <EditText 
                android:id="@+id/etPanCard"
                android:layout_weight="1"
                style="@style/EditTextStyle"
                android:hint="@string/pan_card_hint"
                android:inputType="text"
                />
            <EditText 
                android:id="@+id/etVoterId"
                android:layout_weight="1"
                style="@style/EditTextStyle"
                android:hint="@string/voter_id_hint"
                android:inputType="text"
                />
            <EditText 
                android:id="@+id/etAadhar"
                android:layout_weight="1"
                style="@style/EditTextStyle"
                android:hint="@string/aadhaar_hint"
                android:inputType="text"
                />
            
        </LinearLayout>
        
        <Button 
	    android:id="@+id/btnNext"
	    style="@style/ButtonStyle"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/lletIdentificationNumber"
	    android:text="@string/next"/>
	
	<TextView
        style="@style/blankTextView"
    	android:layout_below="@id/btnNext" />
	
    </RelativeLayout>
</ScrollView>
</RelativeLayout>
