<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Formal_Health_Care_Provider_Gov_Part_1" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@id/tvHeading"
            style="@style/Heading" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeading"
            android:layout_centerInParent="true" >

            <RelativeLayout
                style="@style/outerBox"
                android:layout_centerInParent="true" >

                <TextView
                    android:id="@+id/tvFHCPGovHeading"
                    style="@style/SubHeading"
                    android:text="@string/heading_fhp_gov" />

                <RadioGroup
                    android:id="@+id/rgEmpType"
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/tvFHCPGovHeading"
                    android:layout_centerHorizontal="true" >

                    <RadioButton
                        android:id="@+id/radioCentral"
                        style="@style/RadioButtonStyleWithBackground"
                        android:checked="true"
                        android:text="@string/central_gov" />

                    <RadioButton
                        android:id="@+id/radioState"
                        style="@style/RadioButtonStyleWithBackground"
                        android:text="@string/state_gov" />

                    <RadioButton
                        android:id="@+id/radioPublic"
                        style="@style/RadioButtonStyleWithBackground"
                        android:text="@string/public_sector" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvEmployment"
                    style="@style/Label"
                    android:layout_below="@id/rgEmpType"
                    android:text="@string/employment" />

                <RadioGroup
                    android:id="@+id/rgEmployment"
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/rgEmpType"
                    android:layout_alignLeft="@+id/etPracticingSince"
                    android:layout_toRightOf="@id/tvEmployment" >

                    <RadioButton
                        android:id="@+id/radioPermanent"
                        style="@style/RadioButtonStyle"
                        android:checked="true"
                        android:text="@string/permanent" />

                    <RadioButton
                        android:id="@+id/radioContractual"
                        style="@style/RadioButtonStyle"
                        android:text="@string/contractual" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvRole"
                    style="@style/Label"
                    android:layout_below="@id/tvEmployment"
                    android:text="@string/role" />

                <Spinner
                    android:id="@+id/spnRole"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_alignLeft="@id/etPracticingSince"
                    android:layout_below="@id/rgEmployment"
                    android:layout_toRightOf="@id/tvRole"
                    android:entries="@array/role_fhcp_gov_array"
                    android:prompt="@string/role_prompt"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/tvNote"
                    style="@style/Label"
                    android:layout_alignLeft="@id/spnRole"
                    android:layout_below="@id/spnRole"
                    android:text="@string/note_fhcp_gov"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/tvPracticingSince"
                    style="@style/Label"
                    android:layout_alignLeft="@id/tvRole"
                    android:layout_below="@id/tvNote"
                    android:text="@string/practicing_since" />
                <EditText 
            android:id="@+id/etPracticingSince"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNote"
            android:layout_toRightOf="@id/tvPracticingSince"
            android:layout_alignTop="@id/tvPracticingSince"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            />
                <Button 
            android:id="@+id/btnOpenCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/calendar"
            android:layout_toRightOf="@id/etPracticingSince"
            android:layout_alignTop="@id/etPracticingSince"/>

                <TextView
                    android:id="@+id/tvPracticingLocation"
                    style="@style/Label"
                    android:layout_below="@id/tvPracticingSince"
                    android:text="@string/practicing_location" />
                
                <RadioGroup
                    android:id="@+id/rgPracticingLocation"
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/etPracticingSince"
                    android:layout_toRightOf="@id/tvPracticingLocation" >

                    <RadioButton
                        android:id="@+id/radioUrban"
                        style="@style/RadioButtonStyle"
                        android:checked="true"
                        android:text="@string/urban" />

                    <RadioButton
                        android:id="@+id/radioSemiUrban"
                        style="@style/RadioButtonStyle"
                        android:text="@string/semi_urban" />
                    
                    <RadioButton
                        android:id="@+id/radioRural"
                        style="@style/RadioButtonStyle"
                        android:text="@string/rural" />
                </RadioGroup>

                <Button
                    android:id="@+id/btnNext"
                    style="@style/ButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvPracticingLocation"
                    android:text="@string/next" />

                <TextView
                    style="@style/blankTextView"
                    android:layout_below="@id/btnNext" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>