<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Informal_Health_Care_Provider" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <TextView
            android:id="@id/tvHeading"
            style="@style/Heading" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHeading"
            android:layout_centerInParent="true" >

            <RelativeLayout
                style="@style/outerBox"
                android:layout_centerInParent="true" >

                <TextView
                    android:id="@+id/tvIFHCPHeading"
                    style="@style/SubHeading"
                    android:text="@string/heading_ifhp" />

                <TextView
                    android:id="@+id/tvQualification"
                    style="@style/Label"
                    android:layout_below="@id/tvIFHCPHeading"
                    android:text="@string/qualification_ifhp" />

                <Spinner
                    android:id="@+id/spnQualification"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_alignLeft="@+id/etPracticingSince"
                    android:layout_below="@id/tvIFHCPHeading"
                    android:layout_toRightOf="@id/tvQualification"
                    android:entries="@array/qualificaition_ifhcp"
                    android:prompt="@string/qualification_ifhcp_prompt" />

                <EditText 
                    android:id="@+id/etQualificationOther"
                    android:layout_below="@id/spnQualification"
                    style="@style/EditTextStyle"
                    android:layout_alignLeft="@+id/etPracticingSince"
                    android:hint="@string/leave_blank"
                    />
                <TextView 
                    android:id="@+id/tvQualificationLocation"
                    style="@style/Label"
                    android:layout_below="@id/tvQualification"
                    android:layout_alignTop="@+id/rgQualificationLocation"
                    android:text="@string/qualification_location"
                    />
                
                <RadioGroup 
                    android:id="@+id/rgQualificationLocation"
                    style="@style/RadioGroupStyle"
                    android:layout_below="@id/etQualificationOther"
                    android:layout_alignLeft="@+id/etPracticingSince"
                    android:orientation="horizontal"
                    >
                    
                    <RadioButton 
                        android:id="@+id/radioWB"
                        style="@style/RadioButtonStyle"
                        android:text="@string/west_bengal"
                        android:checked="true"
                        />
                    <RadioButton 
                        android:id="@+id/radioOutsideWB"
                        style="@style/RadioButtonStyle"
                        android:text="@string/outside_west_bengal"
                        />
                    
                </RadioGroup>
                
                <TextView
                    android:id="@+id/tvPracticingSince"
                    style="@style/Label"
                    android:layout_below="@id/tvQualificationLocation"
                    android:text="@string/practicing_since" />

                <EditText
                    android:id="@+id/etPracticingSince"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/tvPracticingSince"
                    android:layout_below="@id/rgQualificationLocation"
                    android:layout_toRightOf="@id/tvPracticingSince"
                    android:hint="@string/date_of_birth"
                    android:inputType="date" />

                <Button
                    android:id="@+id/btnOpenCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/etPracticingSince"
                    android:layout_toRightOf="@id/etPracticingSince"
                    android:background="@drawable/calendar" />

                <TextView
                    android:id="@+id/tvPracticingLocation"
                    style="@style/Label"
                    android:layout_below="@id/tvPracticingSince"
                    android:text="@string/practicing_location" />

                <RadioGroup
                    android:id="@+id/rgPracticingLocation"
                    style="@style/RadioGroupStyle"
                    android:layout_alignLeft="@id/spnQualification"
                    android:orientation="vertical"
                    android:layout_below="@id/etPracticingSince"
                    android:layout_toRightOf="@id/tvPracticingLocation" >

                    <RadioButton
                        android:id="@+id/radioUrban"
                        style="@style/RadioButtonStyle"
                        android:checked="true"
                        android:text="@string/urban" />

                    <RadioButton
                        android:id="@+id/radioSemiUrban"
                        style="@style/RadioButtonStyle"
                        android:text="@string/semi_urban" />

                    <RadioButton
                        android:id="@+id/radioRural"
                        style="@style/RadioButtonStyle"
                        android:text="@string/rural" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvPrescribingMethod"
                    style="@style/Label"
                    android:layout_below="@id/rgPracticingLocation"
                    android:text="@string/prescribing_method" />

                <RadioGroup
                    android:id="@+id/rgPrescribingMethod"
                    style="@style/RadioGroupStyle"
                    android:orientation="vertical"
                    android:layout_alignLeft="@id/spnQualification"
                    android:layout_below="@id/rgPracticingLocation"
                    android:layout_toRightOf="@id/tvPrescribingMethod" >

                    <RadioButton
                        android:id="@+id/radioDispenseDrugs"
                        style="@style/RadioButtonStyle"
                        android:checked="true"
                        android:text="@string/dispense_drugs" />

                    <RadioButton
                        android:id="@+id/radioWritePrescription"
                        style="@style/RadioButtonStyle"
                        android:text="@string/write_prescription" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvModeOfService"
                    style="@style/Label"
                    android:layout_below="@id/rgPrescribingMethod"
                    android:text="@string/mode_of_service" />

                <RadioGroup
                    android:id="@+id/rgModeOfService"
                    style="@style/RadioGroupStyle"
                    android:layout_alignLeft="@+id/spnQualification"
                    android:layout_below="@id/rgPrescribingMethod"
                    android:layout_toRightOf="@id/tvModeOfService" >

                    <RadioButton
                        android:id="@+id/radioStationary"
                        style="@style/RadioButtonStyle"
                        android:checked="true"
                        android:text="@string/stationary" />

                    <RadioButton
                        android:id="@+id/radioMobile"
                        style="@style/RadioButtonStyle"
                        android:text="@string/mobile_mode" />
                </RadioGroup>

                <TextView
                    android:id="@+id/tvVehicle"
                    style="@style/Label"
                    android:layout_below="@id/rgModeOfService"
                    android:text="@string/vehicle" />

                <Spinner
                    android:id="@+id/spnVehicle"
                    style="@style/spinnerDropDownItemStyle"
                    android:layout_alignLeft="@id/etPracticingSince"
                    android:layout_below="@id/rgModeOfService"
                    android:layout_toRightOf="@id/tvVehicle"
                    android:entries="@array/vehicle"
                    android:prompt="@string/vehicle_prompt" />
                
                <EditText 
                    android:id="@+id/etVehicleOther"
                    android:layout_below="@id/spnVehicle"
                    style="@style/EditTextStyle"
                    android:layout_toRightOf="@id/tvVehicle"
                    android:layout_alignLeft="@id/etPracticingSince"
                    android:hint="@string/leave_blank"
                    />

                <Button
                    android:id="@+id/btnNext"
                    style="@style/ButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etVehicleOther"
                    android:text="@string/next" />

                <TextView
                    style="@style/blankTextView"
                    android:layout_below="@id/btnNext" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</RelativeLayout>